<resources>
    <string name="time_card">TimeCard</string>
    <string name="this_week">This Week\'s Time</string>
    <string name="weather">Weather</string>

    <!-- TODO: Organize all of these strings into categories. It currently stresses me out! -->
    <!--Login-->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be more then 5 characters</string>
    <string name="invalid_firstName">Enter your first name to continue</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="sign_up_sentence">Don\'t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>


    <!--Registration -->
    <string name="app_logo_string">application logo</string>
    <string name="register_heading">Work Simplified.</string>
    <string name="example_first_name">Steve</string>
    <string name="example_last_name">Pratt</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>


    <!--Dashboard -->
    <string name="dashboard">Dashboard</string>
    <string name="today">Today</string>
    <string name="notifications_icon">Notification icon</string>
    <string name="clockin_button">Clock in Button</string>
    <string name="settings_button">Settings Button</string>
    <string name="break_button">Break</string>
    <string name="end_break">End Break</string>


    <!--Time card submission Review -->
    <string name="clock_out_image">Clocked out image</string>
    <string name="total_hours_script">Hours Worked Today</string>
    <string name="required">*Required</string>
    <string name="projects_required">Project:</string>
    <string name="tasks_required">Task:</string>
    <string name="task">Task</string>
    <string name="hrs">Hrs</string>
    <string name="add_task">Add task</string>
    <string name="notes">Notes</string>
    <string name="submit">Submit</string>
    <string name="edit_time">Edit Time</string>
    <string name="add_task_btn">Add task button</string>
    <string name="notes_hint">Type your notes here..</string>
    <string name="delete">Delete</string>
    <string name="start_time">*Start Time:</string>
    <string name="end_time">*End Time:</string>
    <string name="edit">Edit</string>


    <!--Bottom navigation bar -->
    <string name="history">History</string>
    <string name="week">Week</string>
    <string name="period">Period</string>
    <string name="hours_preface">Hours:</string>

    <!--Bottom navigation bar -->
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="calendar">Calendar</string>
    <string name="projects">Projects</string>
    <string name="add_time">Add Time</string>
    <string name="edit_time_title">Edit Time</string>
    <string name="settings">Settings</string>


    <!--Edit Time Entry fragment-->
    <string name="project">Project</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="tasks">Tasks</string>
    <string name="breaks">Breaks</string>
    <string name="edit_break">Edit Break</string>
    <string name="edit_task">Edit Task</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="duration">Duration</string>
    <string name="total">Total</string>
    <string name="present">Present</string>
    <string name="add_break">Add Break</string>

    <!--Error Messages-->
    <string name="error">ERROR</string>
    <string name="none">None</string>
    <string name="time_card_loading_error_message">Error loading Time Entry :( Please try again :)</string>
    <string name="login_error">There was an error logging in please try again</string>
    <string name="email_user_input_error">You forgot to enter your email!</string>
    <string name="password_user_input_error">You forgot to enter a password!</string>

    <!--SharedPreferences -->
    <string name="db_pref_key">database_used</string>
    <string name="db_pref_def_val">firebase</string>
    <string name="user_id_key">user_id</string>
    <string name="user_id_def_val">none</string>
    <string name="first_login_key">first_login</string>
    <string name="user_email_key">user_email</string>
    <string name="user_display_name_key">user_display_name</string>
    <string name="clock_state_key">clock_state</string>
    <string name="is_clocked_in_key">clocked_in</string>
    <string name="total_hours_key">total_hours</string>
    <string name="on_break_key">on_break</string>


</resources>
