<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/trans_grey_50">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/break_edit_pop_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners_40dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/break_edit_pop_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semi_bold"
            android:text="@string/edit_task"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunito_semi_bold"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/purple_dark_bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/break_edit_pop_name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/break_edit_pop_title_tv" />


        <AutoCompleteTextView
            android:id="@+id/break_edit_pop_name_tv"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semi_bold"
            android:hint="@string/none"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv1" />

        <view
            android:id="@+id/line_1"
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/break_edit_pop_name_tv" />


        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/nunito_semi_bold"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="@color/purple_dark_bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/tv3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/break_edit_pop_name_tv" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/nunito_semi_bold"
            android:gravity="center"
            android:text="@string/end"
            android:textColor="@color/purple_dark_bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv2"
            app:layout_constraintTop_toBottomOf="@id/break_edit_pop_name_tv" />

        <TextView
            android:id="@+id/break_edit_pop_start_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/nunito_regular"
            android:gravity="center"
            android:text="@string/none"
            android:textColor="@color/grey_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/break_edit_pop_end_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv2" />

        <TextView
            android:id="@+id/break_edit_pop_end_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/nunito_regular"
            android:gravity="center"
            android:text="@string/none"
            android:textColor="@color/grey_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/break_edit_pop_start_tv"
            app:layout_constraintTop_toBottomOf="@id/tv3" />

        <Button
            android:id="@+id/break_edit_pop_save_btn"
            android:layout_width="72dp"
            android:layout_height="34dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corners_40dp"
            android:backgroundTint="@color/button_orange"
            android:fontFamily="@font/nunito_semi_bold"
            android:text="@string/save"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/break_edit_pop_cancel_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/break_edit_pop_start_tv" />


        <Button
            android:id="@+id/break_edit_pop_cancel_btn"
            android:layout_width="72dp"
            android:layout_height="34dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corners_40dp"
            android:backgroundTint="@color/btn_drk_blue_80"
            android:fontFamily="@font/nunito_semi_bold"
            android:text="@string/cancel"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/break_edit_pop_save_btn"
            app:layout_constraintTop_toBottomOf="@+id/break_edit_pop_end_tv" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>